# CXX_Template_OpenGL_CMake

./: .env  CMakeLists.txt  Dockerfile_CXX  README.md  create_win_executable.cmd  docker-compose.yml  docker-compose_run.sh  docker_run.sh
build_info/: BUILD_CXX_APP_NAME.txt  BUILD_CXX_APP_TYPE.txt
scripts/: generate.sh  generate_build_info.cmd  generate_build_info.sh  init_documentation.sh  run_all.sh  run_application.sh  run_profile.sh  run_tests.sh
src/: main.cpp
test/: CMakeLists.txt  main.cpp
